--- a/machine/dni/dni_3048up/onie-rom.conf
+++ b/machine/dni/dni_3048up/onie-rom.conf
@@ -2,16 +2,19 @@
 
 description="Delta Networks, DNI-3048UP"
 
-# Top Down the Nand flash looks like:
-# 1. u-boot image  (include shmoo)
+# Top Down the SPI flash looks like:
+# 1. u-boot image
 # 2. u-boot environment
-# 3. onie-uimage
-format=contiguous-up
+# 3. shmoo
+# 4. sys-eeprom
+# 5. onie-uimage
+# 6. dni-diag-uimage
+format=uboot_ubootenv-up
 
-uboot_machine=dni_34xx
+uboot_machine=DNI_3048UP
 
-uimage_max_size=$(( 16 * 1024 * 1024 ))
-uboot_max_size=$((   3 * 1024 * 1024 ))
+uimage_max_size=$(( 14912 * 1024 ))
+uboot_max_size=$(( 1 * 1024 * 1024 ))
 
 # Local Variables:
 # mode: shell-script
