Added support for arm64(aarch64) UEFI
Signed-off-by: Pankaj Bansal <pankajbansal3073@gmail.com>

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -172,6 +172,8 @@ PLATFORM  = $(ARCH)-$(MACHINE_PREFIX)
 
 ifeq ($(UBOOT_ENABLE),yes)
 	ROOTFS_ARCH = u-boot-arch
+else ifeq ($(GRUB_ENABLE),yes)
+	ROOTFS_ARCH = grub-arch
 else
 	ROOTFS_ARCH = $(ONIE_ARCH)
 endif
@@ -289,12 +291,14 @@ endif
 # Default mirror for packages needed by ONIE
 ONIE_MIRROR	?= http://mirror.opencompute.org/onie
 
-include make/crosstool-ng.make
 include make/kernel-download.make
-ifneq ($(XTOOLS_LIBC),glibc)
-  include make/uclibc-download.make
+ifeq ($(XTOOLS_ENABLE),yes)
+  include make/crosstool-ng.make
+  ifneq ($(XTOOLS_LIBC),glibc)
+    include make/uclibc-download.make
+  endif
+  include make/xtools.make
 endif
-include make/xtools.make
 include make/sysroot.make
 include make/kernel.make
 ifeq ($(UBOOT_ENABLE),yes)
@@ -426,7 +430,8 @@ DEBIAN_BUILD_HOST_PACKAGES	= build-essential stgit u-boot-tools util-linux \
 				  gperf device-tree-compiler python-all-dev xorriso \
 				  autoconf automake bison flex texinfo libtool libtool-bin \
 				  realpath gawk libncurses5 libncurses5-dev bc \
-				  dosfstools mtools pkg-config
+				  dosfstools mtools pkg-config git wget help2man libexpat1 \
+				  libexpat1-dev fakeroot
 
 PHONY += debian-prepare-build-host
 debian-prepare-build-host:
