Update Crosstool-NG from 1.21.0 to support Aarch64 toolchain

--- a/build-config/conf/crosstool/gcc-5.3.0/glibc-2.23/crosstool.armv8a.config
+++ b/build-config/conf/crosstool/gcc-5.3.0/glibc-2.23/crosstool.armv8a.config
@@ -3,9 +3,7 @@
 # Crosstool-NG Configuration
 #
 CT_CONFIGURE_has_static_link=y
-CT_CONFIGURE_has_make381=y
 CT_CONFIGURE_has_xz=y
-CT_CONFIGURE_has_cvs=y
 CT_MODULES=y
 
 #
@@ -16,8 +14,7 @@ CT_MODULES=y
 # crosstool-NG behavior
 #
 # CT_OBSOLETE is not set
-CT_EXPERIMENTAL=y
-# CT_ALLOW_BUILD_AS_ROOT is not set
+# CT_EXPERIMENTAL is not set
 # CT_DEBUG_CT is not set
 
 #
@@ -32,7 +29,7 @@ CT_RM_RF_PREFIX_DIR=y
 CT_REMOVE_DOCS=y
 CT_INSTALL_DIR_RO=y
 CT_STRIP_HOST_TOOLCHAIN_EXECUTABLES=y
-CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES=y
+# CT_STRIP_TARGET_TOOLCHAIN_EXECUTABLES is not set
 
 #
 # Downloading
@@ -79,46 +76,51 @@ CT_CONFIG_SHELL="${bash}"
 #
 # CT_LOG_ERROR is not set
 # CT_LOG_WARN is not set
-CT_LOG_INFO=y
-# CT_LOG_EXTRA is not set
+# CT_LOG_INFO is not set
+CT_LOG_EXTRA=y
 # CT_LOG_ALL is not set
 # CT_LOG_DEBUG is not set
-CT_LOG_LEVEL_MAX="INFO"
+CT_LOG_LEVEL_MAX="EXTRA"
 # CT_LOG_SEE_TOOLS_WARN is not set
-# CT_LOG_PROGRESS_BAR is not set
+CT_LOG_PROGRESS_BAR=y
 CT_LOG_TO_FILE=y
 CT_LOG_FILE_COMPRESS=y
 
 #
 # Target options
 #
-CT_ARCH="x86"
+CT_ARCH="arm"
+CT_ARCH_SUPPORTS_BOTH_MMU=y
+CT_ARCH_SUPPORTS_BOTH_ENDIAN=y
 CT_ARCH_SUPPORTS_32=y
 CT_ARCH_SUPPORTS_64=y
 CT_ARCH_SUPPORTS_WITH_ARCH=y
 CT_ARCH_SUPPORTS_WITH_CPU=y
 CT_ARCH_SUPPORTS_WITH_TUNE=y
+CT_ARCH_DEFAULT_HAS_MMU=y
+CT_ARCH_DEFAULT_LE=y
 CT_ARCH_DEFAULT_32=y
 CT_ARCH_ARCH=""
 CT_ARCH_CPU=""
 CT_ARCH_TUNE=""
+# CT_ARCH_BE is not set
+CT_ARCH_LE=y
 # CT_ARCH_32 is not set
 CT_ARCH_64=y
 CT_ARCH_BITNESS=64
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 # CT_ARCH_alpha is not set
-# CT_ARCH_arm is not set
+CT_ARCH_arm=y
 # CT_ARCH_avr is not set
 # CT_ARCH_m68k is not set
-# CT_ARCH_microblaze is not set
 # CT_ARCH_mips is not set
 # CT_ARCH_nios2 is not set
 # CT_ARCH_powerpc is not set
 # CT_ARCH_s390 is not set
 # CT_ARCH_sh is not set
 # CT_ARCH_sparc is not set
-CT_ARCH_x86=y
+# CT_ARCH_x86 is not set
 # CT_ARCH_xtensa is not set
 CT_ARCH_alpha_AVAILABLE=y
 CT_ARCH_arm_AVAILABLE=y
@@ -140,11 +142,23 @@ CT_ARCH_SUFFIX=""
 #
 # CT_MULTILIB is not set
 CT_ARCH_USE_MMU=y
+CT_ARCH_ENDIAN="little"
 
 #
 # Target optimisations
 #
+CT_ARCH_EXCLUSIVE_WITH_CPU=y
 CT_ARCH_FLOAT=""
+
+#
+# arm other options
+#
+CT_ARCH_ARM_MODE="arm"
+CT_ARCH_ARM_MODE_ARM=y
+# CT_ARCH_ARM_MODE_THUMB is not set
+# CT_ARCH_ARM_INTERWORKING is not set
+CT_ARCH_ARM_EABI_FORCE=y
+CT_ARCH_ARM_EABI=y
 
 #
 # Toolchain options
@@ -159,22 +173,20 @@ CT_SYSROOT_NAME="sysroot"
 CT_SYSROOT_DIR_PREFIX=""
 CT_WANTS_STATIC_LINK=y
 # CT_STATIC_TOOLCHAIN is not set
-CT_TOOLCHAIN_PKGVERSION="ONIE-${LSB_RELEASE_TAG}"
+CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL=""
 
 #
 # Tuple completion and aliasing
 #
-CT_TARGET_VENDOR="onie"
+CT_TARGET_VENDOR=""
 CT_TARGET_ALIAS_SED_EXPR=""
-CT_TARGET_ALIAS="x86_64"
+CT_TARGET_ALIAS=""
 
 #
 # Toolchain type
 #
-# CT_NATIVE is not set
 CT_CROSS=y
-# CT_CROSS_NATIVE is not set
 # CT_CANADIAN is not set
 CT_TOOLCHAIN_TYPE="cross"
 
@@ -188,7 +200,7 @@ CT_BUILD_SUFFIX=""
 #
 # Misc options
 #
-CT_TOOLCHAIN_ENABLE_NLS=y
+# CT_TOOLCHAIN_ENABLE_NLS is not set
 
 #
 # Operating System
@@ -198,12 +210,21 @@ CT_KERNEL="linux"
 CT_KERNEL_VERSION="${LINUX_RELEASE}"
 # CT_KERNEL_bare_metal is not set
 CT_KERNEL_linux=y
-# CT_KERNEL_windows is not set
 CT_KERNEL_bare_metal_AVAILABLE=y
 CT_KERNEL_linux_AVAILABLE=y
 CT_KERNEL_LINUX_CUSTOM=y
 CT_KERNEL_LINUX_CUSTOM_LOCATION="${DOWNLOADDIR}/${LINUX_TARBALL}"
 CT_KERNEL_LINUX_CUSTOM_VERSION="${LINUX_RELEASE}"
+# CT_KERNEL_V_4_4 is not set
+# CT_KERNEL_V_4_3 is not set
+# CT_KERNEL_V_4_1 is not set
+# CT_KERNEL_V_3_18 is not set
+# CT_KERNEL_V_3_14 is not set
+# CT_KERNEL_V_3_12 is not set
+# CT_KERNEL_V_3_10 is not set
+# CT_KERNEL_V_3_4 is not set
+# CT_KERNEL_V_3_2 is not set
+# CT_KERNEL_V_2_6_32 is not set
 CT_KERNEL_windows_AVAILABLE=y
 
 #
@@ -230,13 +251,15 @@ CT_BINUTILS_binutils=y
 #
 # GNU binutils
 #
-# CT_BINUTILS_CUSTOM is not set
-CT_BINUTILS_VERSION="2.24"
+CT_BINUTILS_VERSION="2.26"
 # CT_CC_BINUTILS_SHOW_LINARO is not set
-# CT_BINUTILS_V_2_26 is not set
+CT_BINUTILS_V_2_26=y
 # CT_BINUTILS_V_2_25_1 is not set
-CT_BINUTILS_V_2_24=y
+# CT_BINUTILS_V_2_24 is not set
 # CT_BINUTILS_V_2_23_2 is not set
+CT_BINUTILS_2_26_or_later=y
+CT_BINUTILS_2_25_1_or_later=y
+CT_BINUTILS_2_25_or_later=y
 CT_BINUTILS_2_24_or_later=y
 CT_BINUTILS_2_23_2_or_later=y
 CT_BINUTILS_HAS_HASH_STYLE=y
@@ -245,17 +268,19 @@ CT_BINUTILS_GOLD_SUPPORTS_ARCH=y
 CT_BINUTILS_GOLD_SUPPORT=y
 CT_BINUTILS_HAS_PLUGINS=y
 CT_BINUTILS_HAS_PKGVERSION_BUGURL=y
-CT_BINUTILS_LINKER_LD=y
-# CT_BINUTILS_LINKER_GOLD is not set
-# CT_BINUTILS_LINKER_LD_GOLD is not set
+CT_BINUTILS_FORCE_LD_BFD=y
+# CT_BINUTILS_LINKER_LD is not set
+CT_BINUTILS_LINKER_LD_GOLD=y
 # CT_BINUTILS_LINKER_GOLD_LD is not set
-CT_BINUTILS_LINKERS_LIST="ld"
+CT_BINUTILS_GOLD_INSTALLED=y
+CT_BINUTILS_GOLD_THREADS=y
+CT_BINUTILS_LINKER_BOTH=y
+CT_BINUTILS_LINKERS_LIST="ld,gold"
+CT_BINUTILS_LD_WRAPPER=y
 CT_BINUTILS_LINKER_DEFAULT="bfd"
-# CT_BINUTILS_PLUGINS is not set
+CT_BINUTILS_PLUGINS=y
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
-CT_BINUTILS_FOR_TARGET=y
-CT_BINUTILS_FOR_TARGET_IBERTY=y
-CT_BINUTILS_FOR_TARGET_BFD=y
+# CT_BINUTILS_FOR_TARGET is not set
 
 #
 # binutils other options
@@ -264,55 +289,55 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 #
 # C-library
 #
-CT_LIBC="uClibc"
-CT_LIBC_VERSION="0.9.33.2"
-# CT_LIBC_glibc is not set
+CT_LIBC="glibc"
+CT_LIBC_VERSION="2.23"
+CT_LIBC_glibc=y
 # CT_LIBC_musl is not set
-CT_LIBC_uClibc=y
+# CT_LIBC_uClibc is not set
 CT_LIBC_avr_libc_AVAILABLE=y
 CT_LIBC_glibc_AVAILABLE=y
 CT_THREADS="nptl"
+# CT_CC_GLIBC_SHOW_LINARO is not set
+CT_LIBC_GLIBC_V_2_23=y
+# CT_LIBC_GLIBC_V_2_22 is not set
+# CT_LIBC_GLIBC_V_2_21 is not set
+# CT_LIBC_GLIBC_V_2_20 is not set
+# CT_LIBC_GLIBC_V_2_19 is not set
+# CT_LIBC_GLIBC_V_2_18 is not set
+CT_LIBC_GLIBC_2_23_or_later=y
+CT_LIBC_GLIBC_2_20_or_later=y
 CT_LIBC_mingw_AVAILABLE=y
 CT_LIBC_musl_AVAILABLE=y
 CT_LIBC_newlib_AVAILABLE=y
 CT_LIBC_none_AVAILABLE=y
 CT_LIBC_uClibc_AVAILABLE=y
-# CT_LIBC_UCLIBC_CUSTOM is not set
-# CT_LIBC_UCLIBC_NG_V_1_0_12 is not set
-CT_LIBC_UCLIBC_V_0_9_33_2=y
-CT_LIBC_UCLIBC_0_9_33_2_or_later=y
-CT_LIBC_UCLIBC_PARALLEL=y
-CT_LIBC_UCLIBC_VERBOSITY_0=y
-# CT_LIBC_UCLIBC_VERBOSITY_1 is not set
-# CT_LIBC_UCLIBC_VERBOSITY_2 is not set
-CT_LIBC_UCLIBC_VERBOSITY=""
-CT_LIBC_UCLIBC_DEBUG_LEVEL_0=y
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_1 is not set
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_2 is not set
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_3 is not set
-CT_LIBC_UCLIBC_DEBUG_LEVEL=0
-CT_LIBC_UCLIBC_CONFIG_FILE="${UCLIBC_CONFIG}"
 CT_LIBC_SUPPORT_THREADS_ANY=y
 CT_LIBC_SUPPORT_THREADS_NATIVE=y
-CT_LIBC_SUPPORT_THREADS_LT=y
-CT_LIBC_SUPPORT_THREADS_NONE=y
 
 #
 # Common C library options
 #
 CT_THREADS_NATIVE=y
-# CT_THREADS_LT is not set
-# CT_THREADS_NONE is not set
 CT_LIBC_XLDD=y
 
 #
-# uClibc other options
+# glibc other options
 #
-CT_LIBC_UCLIBC_LNXTHRD=""
-# CT_LIBC_UCLIBC_LOCALES is not set
-CT_LIBC_UCLIBC_IPV6=y
-CT_LIBC_UCLIBC_WCHAR=y
-CT_LIBC_UCLIBC_FENV=y
+# CT_LIBC_GLIBC_PORTS_EXTERNAL is not set
+CT_LIBC_glibc_familly=y
+CT_LIBC_GLIBC_EXTRA_CONFIG_ARRAY=""
+CT_LIBC_GLIBC_CONFIGPARMS=""
+CT_LIBC_GLIBC_EXTRA_CFLAGS=""
+CT_LIBC_EXTRA_CC_ARGS=""
+# CT_LIBC_DISABLE_VERSIONING is not set
+CT_LIBC_OLDEST_ABI=""
+CT_LIBC_GLIBC_FORCE_UNWIND=y
+CT_LIBC_ADDONS_LIST=""
+# CT_LIBC_LOCALES is not set
+# CT_LIBC_GLIBC_KERNEL_VERSION_NONE is not set
+CT_LIBC_GLIBC_KERNEL_VERSION_AS_HEADERS=y
+# CT_LIBC_GLIBC_KERNEL_VERSION_CHOSEN is not set
+CT_LIBC_GLIBC_MIN_KERNEL="${LINUX_RELEASE}"
 
 #
 # C compiler
@@ -322,14 +347,15 @@ CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_CORE_PASS_1_NEEDED=y
 CT_CC_CORE_PASS_2_NEEDED=y
 CT_CC_gcc=y
-CT_CC_GCC_CUSTOM=y
-CT_CC_GCC_CUSTOM_LOCATION="${DOWNLOADDIR}/gcc-${GCC_VERSION}.tar.bz2"
-CT_CC_GCC_CUSTOM_VERSION="${GCC_VERSION}"
-CT_CC_GCC_VERSION="${GCC_VERSION}"
+CT_CC_GCC_VERSION="5.3.0"
+# CT_CC_GCC_SHOW_LINARO is not set
+CT_CC_GCC_V_5_3_0=y
+# CT_CC_GCC_V_4_9_3 is not set
+# CT_CC_GCC_V_4_8_5 is not set
 CT_CC_GCC_4_8_or_later=y
 CT_CC_GCC_4_9_or_later=y
+CT_CC_GCC_5=y
 CT_CC_GCC_5_or_later=y
-CT_CC_GCC_latest=y
 CT_CC_GCC_HAS_GRAPHITE=y
 CT_CC_GCC_USE_GRAPHITE=y
 CT_CC_GCC_HAS_LTO=y
@@ -337,6 +363,8 @@ CT_CC_GCC_USE_LTO=y
 CT_CC_GCC_HAS_PKGVERSION_BUGURL=y
 CT_CC_GCC_HAS_BUILD_ID=y
 CT_CC_GCC_HAS_LNK_HASH_STYLE=y
+CT_CC_GCC_ENABLE_PLUGINS=y
+CT_CC_GCC_GOLD=y
 CT_CC_GCC_USE_GMP_MPFR=y
 CT_CC_GCC_USE_MPC=y
 CT_CC_GCC_HAS_LIBQUADMATH=y
@@ -360,6 +388,7 @@ CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
 # CT_CC_GCC_LIBGOMP is not set
 # CT_CC_GCC_LIBSSP is not set
 # CT_CC_GCC_LIBQUADMATH is not set
+# CT_CC_GCC_LIBSANITIZER is not set
 
 #
 # Misc. obscure options.
@@ -384,26 +413,19 @@ CT_CC_SUPPORT_JAVA=y
 CT_CC_SUPPORT_ADA=y
 CT_CC_SUPPORT_OBJC=y
 CT_CC_SUPPORT_OBJCXX=y
+CT_CC_SUPPORT_GOLANG=y
 
 #
 # Additional supported languages:
 #
 CT_CC_LANG_CXX=y
 # CT_CC_LANG_JAVA is not set
-# CT_CC_LANG_ADA is not set
-# CT_CC_LANG_OBJC is not set
-# CT_CC_LANG_OBJCXX is not set
-CT_CC_LANG_OTHERS=""
 
 #
 # Debug facilities
 #
 # CT_DEBUG_dmalloc is not set
-CT_DEBUG_duma=y
-CT_DUMA_A=y
-CT_DUMA_SO=y
-CT_DUMA_V_2_5_15=y
-CT_DUMA_VERSION="2_5_15"
+# CT_DEBUG_duma is not set
 CT_DEBUG_gdb=y
 CT_GDB_CROSS=y
 # CT_GDB_CROSS_STATIC is not set
@@ -418,10 +440,9 @@ CT_GDB_GDBSERVER_STATIC=y
 #
 # gdb version
 #
-# CT_GDB_CUSTOM is not set
-CT_GDB_VERSION="7.7.1"
+CT_GDB_VERSION="7.11"
 # CT_DEBUG_GDB_SHOW_LINARO is not set
-# CT_GDB_V_7_11 is not set
+CT_GDB_V_7_11=y
 # CT_GDB_V_7_10_1 is not set
 # CT_GDB_V_7_10 is not set
 # CT_GDB_V_7_9_1 is not set
@@ -429,7 +450,7 @@ CT_GDB_VERSION="7.7.1"
 # CT_GDB_V_7_8_2 is not set
 # CT_GDB_V_7_8_1 is not set
 # CT_GDB_V_7_8 is not set
-CT_GDB_V_7_7_1=y
+# CT_GDB_V_7_7_1 is not set
 # CT_GDB_V_7_7 is not set
 # CT_GDB_V_7_6_1 is not set
 # CT_GDB_V_7_5_1 is not set
@@ -447,26 +468,24 @@ CT_GDB_7_0_or_later=y
 CT_GDB_HAS_PKGVERSION_BUGURL=y
 CT_GDB_HAS_PYTHON=y
 CT_GDB_INSTALL_GDBINIT=y
-CT_DEBUG_ltrace=y
-CT_LTRACE_V_0_7_3=y
-# CT_LTRACE_V_0_5_3 is not set
-# CT_LTRACE_V_0_5_2 is not set
-CT_LTRACE_VERSION="0.7.3"
+# CT_DEBUG_ltrace is not set
 CT_DEBUG_strace=y
-# CT_STRACE_V_4_10 is not set
-CT_STRACE_V_4_9=y
+CT_STRACE_V_4_10=y
+# CT_STRACE_V_4_9 is not set
 # CT_STRACE_V_4_8 is not set
 # CT_STRACE_V_4_7 is not set
 # CT_STRACE_V_4_6 is not set
 # CT_STRACE_V_4_5_20 is not set
 # CT_STRACE_V_4_5_19 is not set
 # CT_STRACE_V_4_5_18 is not set
-CT_STRACE_VERSION="4.9"
+CT_STRACE_VERSION="4.10"
 
 #
 # Companion libraries
 #
 CT_COMPLIBS_NEEDED=y
+CT_LIBICONV_NEEDED=y
+CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
@@ -474,15 +493,20 @@ CT_MPC_NEEDED=y
 CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
 CT_COMPLIBS=y
+CT_LIBICONV=y
+CT_GETTEXT=y
 CT_GMP=y
 CT_MPFR=y
 CT_ISL=y
 CT_MPC=y
-CT_LIBELF_TARGET=y
 CT_EXPAT=y
 CT_NCURSES=y
-# CT_GMP_V_6_1_0 is not set
-CT_GMP_V_6_0_0=y
+CT_LIBICONV_V_1_14=y
+CT_LIBICONV_VERSION="1.14"
+CT_GETTEXT_V_0_19_6=y
+CT_GETTEXT_VERSION="0.19.6"
+CT_GMP_V_6_1_0=y
+# CT_GMP_V_6_0_0 is not set
 # CT_GMP_V_5_1_3 is not set
 # CT_GMP_V_5_1_1 is not set
 # CT_GMP_V_5_0_2 is not set
@@ -491,41 +515,34 @@ CT_GMP_V_6_0_0=y
 # CT_GMP_V_4_3_1 is not set
 # CT_GMP_V_4_3_0 is not set
 CT_GMP_5_0_2_or_later=y
-CT_GMP_VERSION="6.0.0a"
-# CT_MPFR_V_3_1_3 is not set
-CT_MPFR_V_3_1_2=y
+CT_GMP_VERSION="6.1.0"
+CT_MPFR_V_3_1_3=y
+# CT_MPFR_V_3_1_2 is not set
 # CT_MPFR_V_3_1_0 is not set
 # CT_MPFR_V_3_0_1 is not set
 # CT_MPFR_V_3_0_0 is not set
 # CT_MPFR_V_2_4_2 is not set
 # CT_MPFR_V_2_4_1 is not set
 # CT_MPFR_V_2_4_0 is not set
-CT_MPFR_VERSION="3.1.2"
-# CT_ISL_V_0_14 is not set
-CT_ISL_V_0_12_2=y
+CT_MPFR_VERSION="3.1.3"
+CT_ISL_V_0_14=y
+# CT_ISL_V_0_12_2 is not set
+CT_ISL_V_0_14_or_later=y
 CT_ISL_V_0_12_or_later=y
-CT_ISL_VERSION="0.12.2"
-# CT_MPC_V_1_0_3 is not set
-CT_MPC_V_1_0_2=y
+CT_ISL_VERSION="0.14"
+CT_MPC_V_1_0_3=y
+# CT_MPC_V_1_0_2 is not set
 # CT_MPC_V_1_0_1 is not set
 # CT_MPC_V_1_0 is not set
 # CT_MPC_V_0_9 is not set
 # CT_MPC_V_0_8_2 is not set
 # CT_MPC_V_0_8_1 is not set
 # CT_MPC_V_0_7 is not set
-CT_MPC_VERSION="1.0.2"
-
-#
-# libelf version needed to build for target
-#
-CT_LIBELF_V_0_8_13=y
-# CT_LIBELF_V_0_8_12 is not set
-CT_LIBELF_VERSION="0.8.13"
+CT_MPC_VERSION="1.0.3"
 CT_EXPAT_V_2_1_0=y
 CT_EXPAT_VERSION="2.1.0"
 CT_NCURSES_V_6_0=y
 CT_NCURSES_VERSION="6.0"
-# CT_NCURSES_NEW_ABI is not set
 
 #
 # Companion libraries common options
@@ -539,15 +556,4 @@ CT_NCURSES_VERSION="6.0"
 #
 # READ HELP before you say 'Y' below !!!
 #
-CT_COMP_TOOLS=y
-CT_COMP_TOOLS_make=y
-# CT_COMP_TOOLS_make_gmake is not set
-CT_COMP_TOOLS_m4=y
-CT_COMP_TOOLS_autoconf=y
-CT_COMP_TOOLS_automake=y
-CT_COMP_TOOLS_libtool=y
-
-#
-# Test suite
-#
-# CT_TEST_SUITE_GCC is not set
+# CT_COMP_TOOLS is not set
