--- a/build-config/conf/crosstool/gcc-4.9.2/glibc-2.24/crosstool.armv8a.config
+++ b/build-config/conf/crosstool/gcc-4.9.2/glibc-2.24/crosstool.armv8a.config
@@ -88,23 +88,29 @@ CT_LOG_FILE_COMPRESS=y
 #
 # Target options
 #
-CT_ARCH="x86"
+CT_ARCH="arm"
+CT_ARCH_SUPPORTS_BOTH_MMU=y
+CT_ARCH_SUPPORTS_BOTH_ENDIAN=y
 CT_ARCH_SUPPORTS_32=y
 CT_ARCH_SUPPORTS_64=y
 CT_ARCH_SUPPORTS_WITH_ARCH=y
 CT_ARCH_SUPPORTS_WITH_CPU=y
 CT_ARCH_SUPPORTS_WITH_TUNE=y
+CT_ARCH_DEFAULT_HAS_MMU=y
+CT_ARCH_DEFAULT_LE=y
 CT_ARCH_DEFAULT_32=y
 CT_ARCH_ARCH=""
 CT_ARCH_CPU=""
 CT_ARCH_TUNE=""
+# CT_ARCH_BE is not set
+CT_ARCH_LE=y
 # CT_ARCH_32 is not set
 CT_ARCH_64=y
 CT_ARCH_BITNESS=64
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 # CT_ARCH_alpha is not set
-# CT_ARCH_arm is not set
+CT_ARCH_arm=y
 # CT_ARCH_avr is not set
 # CT_ARCH_m68k is not set
 # CT_ARCH_microblaze is not set
@@ -114,7 +120,7 @@ CT_TARGET_LDFLAGS=""
 # CT_ARCH_s390 is not set
 # CT_ARCH_sh is not set
 # CT_ARCH_sparc is not set
-CT_ARCH_x86=y
+# CT_ARCH_x86 is not set
 # CT_ARCH_xtensa is not set
 CT_ARCH_alpha_AVAILABLE=y
 CT_ARCH_arm_AVAILABLE=y
@@ -136,11 +142,23 @@ CT_ARCH_SUFFIX=""
 #
 # CT_MULTILIB is not set
 CT_ARCH_USE_MMU=y
+CT_ARCH_ENDIAN="little"
 
 #
 # Target optimisations
 #
+CT_ARCH_EXCLUSIVE_WITH_CPU=y
 CT_ARCH_FLOAT=""
+
+#
+# arm other options
+#
+CT_ARCH_ARM_MODE="arm"
+CT_ARCH_ARM_MODE_ARM=y
+# CT_ARCH_ARM_MODE_THUMB is not set
+# CT_ARCH_ARM_INTERWORKING is not set
+CT_ARCH_ARM_EABI_FORCE=y
+CT_ARCH_ARM_EABI=y
 
 #
 # Toolchain options
@@ -163,7 +181,7 @@ CT_TOOLCHAIN_BUGURL=""
 #
 CT_TARGET_VENDOR="onie"
 CT_TARGET_ALIAS_SED_EXPR=""
-CT_TARGET_ALIAS="x86_64"
+CT_TARGET_ALIAS="armv8a"
 
 #
 # Toolchain type
@@ -194,7 +212,6 @@ CT_KERNEL="linux"
 CT_KERNEL_VERSION="${LINUX_RELEASE}"
 # CT_KERNEL_bare_metal is not set
 CT_KERNEL_linux=y
-# CT_KERNEL_windows is not set
 CT_KERNEL_bare_metal_AVAILABLE=y
 CT_KERNEL_linux_AVAILABLE=y
 CT_KERNEL_LINUX_CUSTOM=y
@@ -241,8 +258,8 @@ CT_BINUTILS_GOLD_SUPPORTS_ARCH=y
 CT_BINUTILS_GOLD_SUPPORT=y
 CT_BINUTILS_HAS_PLUGINS=y
 CT_BINUTILS_HAS_PKGVERSION_BUGURL=y
+CT_BINUTILS_FORCE_LD_BFD=y
 CT_BINUTILS_LINKER_LD=y
-# CT_BINUTILS_LINKER_GOLD is not set
 # CT_BINUTILS_LINKER_LD_GOLD is not set
 # CT_BINUTILS_LINKER_GOLD_LD is not set
 CT_BINUTILS_LINKERS_LIST="ld"
@@ -260,57 +277,50 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 #
 # C-library
 #
-CT_LIBC="uClibc"
-CT_LIBC_VERSION="0.9.33.2"
-# CT_LIBC_glibc is not set
+CT_LIBC="glibc"
+CT_LIBC_VERSION="${XTOOLS_LIBC_VERSION}"
+CT_LIBC_glibc=y
 # CT_LIBC_musl is not set
-CT_LIBC_uClibc=y
+# CT_LIBC_uClibc is not set
 CT_LIBC_avr_libc_AVAILABLE=y
 CT_LIBC_glibc_AVAILABLE=y
 CT_THREADS="nptl"
+CT_LIBC_GLIBC_CUSTOM=y
+CT_LIBC_GLIBC_CUSTOM_LOCATION="${DOWNLOADDIR}/${XTOOLS_LIBC}-${XTOOLS_LIBC_VERSION}.tar.xz"
+CT_LIBC_GLIBC_CUSTOM_VERSION="${XTOOLS_LIBC_VERSION}"
+CT_LIBC_GLIBC_2_20_or_later=y
 CT_LIBC_mingw_AVAILABLE=y
 CT_LIBC_musl_AVAILABLE=y
 CT_LIBC_newlib_AVAILABLE=y
 CT_LIBC_none_AVAILABLE=y
 CT_LIBC_uClibc_AVAILABLE=y
-# CT_LIBC_UCLIBC_CUSTOM is not set
-# CT_LIBC_UCLIBC_CUSTOM_UCLIBC is not set
-# CT_LIBC_UCLIBC_CUSTOM_UCLIBC_NG is not set
-# CT_LIBC_UCLIBC_NG_V_1_0_12 is not set
-CT_LIBC_UCLIBC_V_0_9_33_2=y
-CT_LIBC_UCLIBC_0_9_33_2_or_later=y
-CT_LIBC_UCLIBC_PARALLEL=y
-CT_LIBC_UCLIBC_VERBOSITY_0=y
-# CT_LIBC_UCLIBC_VERBOSITY_1 is not set
-# CT_LIBC_UCLIBC_VERBOSITY_2 is not set
-CT_LIBC_UCLIBC_VERBOSITY=""
-CT_LIBC_UCLIBC_DEBUG_LEVEL_0=y
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_1 is not set
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_2 is not set
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_3 is not set
-CT_LIBC_UCLIBC_DEBUG_LEVEL=0
-CT_LIBC_UCLIBC_CONFIG_FILE="${UCLIBC_CONFIG}"
 CT_LIBC_SUPPORT_THREADS_ANY=y
 CT_LIBC_SUPPORT_THREADS_NATIVE=y
-CT_LIBC_SUPPORT_THREADS_LT=y
-CT_LIBC_SUPPORT_THREADS_NONE=y
 
 #
 # Common C library options
 #
 CT_THREADS_NATIVE=y
-# CT_THREADS_LT is not set
-# CT_THREADS_NONE is not set
 CT_LIBC_XLDD=y
 
 #
-# uClibc other options
+# glibc other options
 #
-CT_LIBC_UCLIBC_LNXTHRD=""
-# CT_LIBC_UCLIBC_LOCALES is not set
-CT_LIBC_UCLIBC_IPV6=y
-CT_LIBC_UCLIBC_WCHAR=y
-CT_LIBC_UCLIBC_FENV=y
+# CT_LIBC_GLIBC_PORTS_EXTERNAL is not set
+CT_LIBC_glibc_familly=y
+CT_LIBC_GLIBC_EXTRA_CONFIG_ARRAY=""
+CT_LIBC_GLIBC_CONFIGPARMS=""
+CT_LIBC_GLIBC_EXTRA_CFLAGS=""
+# CT_LIBC_ENABLE_FORTIFIED_BUILD is not set
+# CT_LIBC_DISABLE_VERSIONING is not set
+CT_LIBC_OLDEST_ABI=""
+CT_LIBC_GLIBC_FORCE_UNWIND=y
+CT_LIBC_ADDONS_LIST=""
+# CT_LIBC_LOCALES is not set
+# CT_LIBC_GLIBC_KERNEL_VERSION_NONE is not set
+CT_LIBC_GLIBC_KERNEL_VERSION_AS_HEADERS=y
+# CT_LIBC_GLIBC_KERNEL_VERSION_CHOSEN is not set
+CT_LIBC_GLIBC_MIN_KERNEL="${LINUX_RELEASE}"
 
 #
 # C compiler
@@ -358,6 +368,7 @@ CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
 # CT_CC_GCC_LIBGOMP is not set
 # CT_CC_GCC_LIBSSP is not set
 # CT_CC_GCC_LIBQUADMATH is not set
+# CT_CC_GCC_LIBSANITIZER is not set
 
 #
 # Misc. obscure options.
@@ -397,11 +408,7 @@ CT_CC_LANG_OTHERS=""
 # Debug facilities
 #
 # CT_DEBUG_dmalloc is not set
-CT_DEBUG_duma=y
-CT_DUMA_A=y
-CT_DUMA_SO=y
-CT_DUMA_V_2_5_15=y
-CT_DUMA_VERSION="2_5_15"
+# CT_DEBUG_duma is not set
 CT_DEBUG_gdb=y
 CT_GDB_CROSS=y
 # CT_GDB_CROSS_STATIC is not set
@@ -445,11 +452,7 @@ CT_GDB_7_0_or_later=y
 CT_GDB_HAS_PKGVERSION_BUGURL=y
 CT_GDB_HAS_PYTHON=y
 CT_GDB_INSTALL_GDBINIT=y
-CT_DEBUG_ltrace=y
-CT_LTRACE_V_0_7_3=y
-# CT_LTRACE_V_0_5_3 is not set
-# CT_LTRACE_V_0_5_2 is not set
-CT_LTRACE_VERSION="0.7.3"
+# CT_DEBUG_ltrace is not set
 CT_DEBUG_strace=y
 # CT_STRACE_V_4_10 is not set
 CT_STRACE_V_4_9=y
@@ -465,6 +468,8 @@ CT_STRACE_VERSION="4.9"
 # Companion libraries
 #
 CT_COMPLIBS_NEEDED=y
+CT_LIBICONV_NEEDED=y
+CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
@@ -472,13 +477,18 @@ CT_MPC_NEEDED=y
 CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
 CT_COMPLIBS=y
+CT_LIBICONV=y
+CT_GETTEXT=y
 CT_GMP=y
 CT_MPFR=y
 CT_ISL=y
 CT_MPC=y
-CT_LIBELF_TARGET=y
 CT_EXPAT=y
 CT_NCURSES=y
+CT_LIBICONV_V_1_14=y
+CT_LIBICONV_VERSION="1.14"
+CT_GETTEXT_V_0_19_6=y
+CT_GETTEXT_VERSION="0.19.6"
 # CT_GMP_V_6_1_0 is not set
 CT_GMP_V_6_0_0=y
 # CT_GMP_V_5_1_3 is not set
@@ -512,13 +522,6 @@ CT_MPC_V_1_0_2=y
 # CT_MPC_V_0_8_1 is not set
 # CT_MPC_V_0_7 is not set
 CT_MPC_VERSION="1.0.2"
-
-#
-# libelf version needed to build for target
-#
-CT_LIBELF_V_0_8_13=y
-# CT_LIBELF_V_0_8_12 is not set
-CT_LIBELF_VERSION="0.8.13"
 CT_EXPAT_V_2_1_0=y
 CT_EXPAT_VERSION="2.1.0"
 CT_NCURSES_V_6_0=y
