crosstool-ng: Apply upstream libgcc_s.so location fix
When we moved to crosstool-ng version
11cb2ddd43fd1ff493f4b7cd63f1cf654294165f, we inadvertently picked up a
crosstool-ng regression.  See the discussion here:

  https://github.com/crosstool-ng/crosstool-ng/issues/449

This patch applies a patch to crosstool-ng to address the regression.
This patch also removes the various lib64 work arounds put in place
because of the regression.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -154,6 +154,8 @@ INITRAMFSDIR	=  $(MBUILDDIR)/initramfs
 # These directories are needed per machine
 TREEDIRS     += $(STAMPDIR) $(STAGE_SYSROOT) $(INITRAMFSDIR)
 
+XTOOLS_ENABLE ?= yes
+
 ifneq (,$(MAKECMDGOALS))
   ifeq (,$(filter onie-release-tag help distclean %build-host, $(MAKECMDGOALS)))
     ifeq ($(wildcard $(MACHINEDIR)/*),)
