--- a/machine/accton/accton_as7312_54x/busybox/conf/config
+++ b/machine/accton/accton_as7312_54x/busybox/conf/config
@@ -6,3 +6,7 @@ CONFIG_SYS_EEPROM_I2C_MEM_ADDR_BITS=8
 CONFIG_SYS_EEPROM_OFFSET=0
 CONFIG_SYS_EEPROM_SIZE=256
 CONFIG_SYS_EEPROM_MAX_SIZE=256
+CONFIG_MKSWAP=y
+CONFIG_FEATURE_MKSWAP_UUID=y
+CONFIG_SWAPONOFF=y
+CONFIG_FEATURE_SWAPON_PRI=y
