Just fix description to right model name with installer.conf.

--- a/machine/wnc/wnc_ssb1_w1/installer.conf
+++ b/machine/wnc/wnc_ssb1_w1/installer.conf
@@ -1,6 +1,6 @@
 # WNC ONIE installer configuration
 # This platform is a 48*10G+4*100G switch.
-description="WNC, SST1-N1"
+description="WNC, SSB1-W1"
 
 # Default ONIE block device
 install_device_platform()
