busybox_1.25.1: updated config to restore stat features
ONL installer was failing due to stat cmd not having --f option. Build
options need to be updated to account for behavioral change in
upstream busybox (new feature flags added between 1.20.2 to 1.25.1).

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/conf/busybox.config
+++ b/build-config/conf/busybox.config
@@ -198,7 +198,7 @@ CONFIG_GROUPS=y
 # CONFIG_SHUF is not set
 CONFIG_STAT=y
 CONFIG_FEATURE_STAT_FORMAT=y
-# CONFIG_FEATURE_STAT_FILESYSTEM is not set
+CONFIG_FEATURE_STAT_FILESYSTEM=y
 CONFIG_SYNC=y
 # CONFIG_FEATURE_SYNC_FANCY is not set
 CONFIG_TEST=y
