--- a/build-config/conf/busybox.config
+++ b/build-config/conf/busybox.config
@@ -619,8 +619,8 @@ CONFIG_IPCS=y
 CONFIG_LOSETUP=y
 CONFIG_LSPCI=y
 CONFIG_LSUSB=y
-# CONFIG_MKSWAP is not set
-# CONFIG_FEATURE_MKSWAP_UUID is not set
+CONFIG_MKSWAP=y
+CONFIG_FEATURE_MKSWAP_UUID=y
 CONFIG_MORE=y
 CONFIG_PIVOT_ROOT=y
 CONFIG_RDATE=y
@@ -629,9 +629,9 @@ CONFIG_READPROFILE=y
 CONFIG_RTCWAKE=y
 CONFIG_SCRIPT=y
 CONFIG_SCRIPTREPLAY=y
-# CONFIG_SWAPONOFF is not set
+CONFIG_SWAPONOFF=y
 # CONFIG_FEATURE_SWAPON_DISCARD is not set
-# CONFIG_FEATURE_SWAPON_PRI is not set
+CONFIG_FEATURE_SWAPON_PRI=y
 CONFIG_SWITCH_ROOT=y
 CONFIG_UMOUNT=y
 CONFIG_FEATURE_UMOUNT_ALL=y
