ls2088ardb: add dpaa2 support
add dpaa2 support which is for network processing acceleration.

Signed-off-by: Zhao Qiang <qiang.zhao@nxp.com>
Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/nxp/nxp_ls2088ardb/kernel/config
+++ b/machine/nxp/nxp_ls2088ardb/kernel/config
@@ -328,3 +328,22 @@ CONFIG_OID_REGISTRY=y
 CONFIG_FONT_SUPPORT=y
 # CONFIG_FONTS is not set
 CONFIG_FONT_8x16=y
+
+CONFIG_NET_VENDOR_FREESCALE=y
+# CONFIG_FSL_PQ_MDIO is not set
+CONFIG_FSL_XGMAC_MDIO=y
+CONFIG_AQUANTIA_PHY=y
+CONFIG_FSL_MC_RESTOOL=y
+CONFIG_FSL_MC_DPIO=y
+# CONFIG_FSL_QBMAN_DEBUG is not set
+CONFIG_FSL_DPAA2=y
+CONFIG_FSL_DPAA2_ETH=y
+# CONFIG_FSL_DPAA2_ETH_USE_ERR_QUEUE is not set
+CONFIG_FSL_DPAA2_MAC=y
+# CONFIG_FSL_DPAA2_MAC_NETDEVS is not set
+CONFIG_FSL_DPAA2_ETHSW=y
+CONFIG_FSL_DPAA2_EVB=y
+CONFIG_FSL_DPAA2_DCE=y
+CONFIG_FSL_DCE_FLOW_LIMIT=65536
+CONFIG_FSL_DCE_API_TIME_TRIAL=m
+CONFIG_CLK_QORIQ=y
