--- a/machine/agema/agema_ag7648c/busybox/conf/config
+++ b/machine/agema/agema_ag7648c/busybox/conf/config
@@ -6,3 +6,4 @@ CONFIG_SYS_EEPROM_I2C_MEM_ADDR_BITS=8
 CONFIG_SYS_EEPROM_SIZE=256
 CONFIG_SYS_EEPROM_I2C_DEVICE="/dev/i2c-0"
 CONFIG_SYS_EEPROM_I2C_ADDR=0x53
+CONFIG_SYS_EEPROM_I2C_WRITE_2B_DELAY=5000
