crosstool-ng: backport fix to compile gcc 4.9.2 using host gcc 6.3.0
Backport a crosstool-ng fix that allows compiling gcc 4.9.2 using gcc
6 host compiler.

  From 1e5f1089dec3af328fd03125d6778f666d0bd4e4 Mon Sep 17 00:00:00 2001
  From: edlinger <edlinger@138bc75d-0d04-0410-961f-82ee72b054a4>
  Date: Thu, 25 Feb 2016 15:33:50 +0000
  Subject: [PATCH 1/1] 2016-02-25  Bernd Edlinger  <bernd.edlinger@hotmail.de>

          Backported from mainline
          2016-02-19  Jakub Jelinek  <jakub@redhat.com>
                      Bernd Edlinger  <bernd.edlinger@hotmail.de>

          * Make-lang.in: Invoke gperf with -L C++.
          * cfns.gperf: Remove prototypes for hash and libc_name_p inlines.
          * cfns.h: Regenerated.
          * except.c (nothrow_libfn_p): Adjust.

Closes: #486
Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/conf/crosstool/gcc-4.9.2/uClibc-0.9.33.2/crosstool.armv7a.config
+++ b/build-config/conf/crosstool/gcc-4.9.2/uClibc-0.9.33.2/crosstool.armv7a.config
@@ -343,9 +343,7 @@ CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_CORE_PASS_1_NEEDED=y
 CT_CC_CORE_PASS_2_NEEDED=y
 CT_CC_gcc=y
-CT_CC_GCC_CUSTOM=y
-CT_CC_GCC_CUSTOM_LOCATION="${DOWNLOADDIR}/gcc-${GCC_VERSION}.tar.bz2"
-CT_CC_GCC_CUSTOM_VERSION="${GCC_VERSION}"
+# CT_CC_GCC_CUSTOM is not set
 CT_CC_GCC_VERSION="${GCC_VERSION}"
 CT_CC_GCC_4_8_or_later=y
 CT_CC_GCC_4_9_or_later=y
