make onie_build_date in U-Boot and machine.conf be consistent
The patch has been tested in Accton AS6710_32X and AS7716_32X

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -3,7 +3,7 @@
 #
 #  Copyright (C) 2013,2014,2015,2016,2017 Curt Brune <curt@cumulusnetworks.com>
 #  Copyright (C) 2014,2015 Carlos Cardenas <carlos@cumulusnetworks.com>
-#  Copyright (C) 2014 david_yang <david_yang@accton.com>
+#  Copyright (C) 2014,2017 david_yang <david_yang@accton.com>
 #  Copyright (C) 2014 Mandeep Sandhu <mandeep.sandhu@cyaninc.com>
 #  Copyright (C) 2016 Pankaj Bansal <pankajbansal3073@gmail.com>
 #
@@ -228,6 +228,8 @@ endif
 # Should ONIE skip programming the Ethernet management interface MAC
 # addresses?  Can be set to "yes" in machine.make.
 SKIP_ETHMGMT_MACS ?= no
+
+ONIE_BUILD_DATE := $(shell LC_ALL=C date -Imin)
 
 TREE_STAMP  = $(STAMPDIR)/tree
 tree-stamp: $(TREE_STAMP)
