--- a/machine/netberg/netberg_rangeley_p1330/busybox/conf/config
+++ b/machine/netberg/netberg_rangeley_p1330/busybox/conf/config
@@ -7,3 +7,4 @@ CONFIG_SYS_EEPROM_SIZE=256
 CONFIG_SYS_EEPROM_I2C_DEVICE="/dev/i2c-1"
 CONFIG_SYS_EEPROM_I2C_ADDR=0x54
 CONFIG_SYS_EEPROM_I2C_MEM_ADDR_BITS=16
+CONFIG_SYS_EEPROM_I2C_WRITE_3B_DELAY=5000
